Thu Sep 20 17:32:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/dblib.c src/dblib/dbopen.c:
	- apply constify patch #1786200

Thu Sep 20 17:02:20 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: do not strip empty lines

Mon Sep 17 17:22:32 EDT 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c correct freebcp -L behavior 
	* src/tds/net.c TDSECONN on no socket failure 
	* src/tds/util.c change iconv messages

Mon Sep 17 17:52:09 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: update for tds9
	* src/server/login.c: remove warning

Mon Sep 17 12:13:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c:
	- improve for very large query (from 9.2 to 0.3 seconds on my 
	  test machine)

Mon Sep 17 10:42:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: update
	* src/ctlib/unittests/get_send_data.c: small fix
	* include/sybdb.h src/dblib/dblib.c src/dblib/unittests/t0022.c:
	- small update for future tds9
	* src/pool/main.c src/pool/user.c src/server/login.c:
	- improve portability and possible remote leakage

Thu Sep 13 12:42:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/freeclose.c:
	- make it works even if login is quite long

Thu Sep 13 08:57:26 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/dynamic1.c: use tds_set_param_type

Thu Sep 06 13:15:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: update for tds9
	* src/tds/read.c: work if initial in_pos is != 0

Sat Aug 25 12:32:01 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	- use ODBC_API instead of SQL_API to allow combined compile

Fri Aug 24 11:50:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/tds/login.c:
	* src/tds/query.c src/tds/token.c:
	- small changes for TDS 9.0
